--- a/public/assets/css/templatemo-villa-agency.css
+++ b/public/assets/css/templatemo-villa-agency.css
@@ -66,6 +66,7 @@ ul, li {
   padding: 0;
   margin: 0;
   list-style: none;
+  font-family: system-ui;
 }
 
 header, nav, section, article, aside, footer, hgroup {
@@ -76,11 +77,16 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
+body{
+  background-color: rgba(0, 0, 0, 0.026);
+}
+
 html, body {
   font-family: 'Poppins', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 a {
@@ -130,7 +136,7 @@ body {
 }
 
 .section {
-  margin-top: 120px;
+  margin-top: 50px;
 }
 
 .section-heading {
@@ -171,7 +177,7 @@ body {
 }
 
 .icon-button a i {
-  background-color: #f35525;
+  background-color: #AC9366;
   height: 50px;
   width: 50px;
   text-align: center;
@@ -183,7 +189,7 @@ body {
 }
 
 .icon-button a:hover {
-  color: #f35525;
+  color: #AC9366;
 }
 
 .icon-button a:hover i {
@@ -192,7 +198,7 @@ body {
 
 .main-button a {
   display: inline-block;
-  background-color: #1e1e1e;
+  background-color: #AC9366;
   color: #fff;
   font-size: 20px;
   font-family: system-ui;
@@ -284,7 +290,7 @@ Pre-loader Style
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #f35525;
+  background: #AC9366;
   border-radius: 50%;
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -307,7 +313,7 @@ Pre-loader Style
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #f35525;
+  background: #AC9366;
   border-radius: 50%;
 }
 
@@ -351,7 +357,7 @@ Header Style
 }
 
 .sub-header ul.social-links li a:hover {
-  background-color: #f35525;
+  background-color: #AC9366;
 }
 
 .sub-header ul.info li {
@@ -370,7 +376,7 @@ Header Style
 
 .sub-header ul.info li i {
   font-size: 20px;
-  color: #f35525;
+  color: #AC9366;
   margin-right: 8px;
 }
 
@@ -479,7 +485,7 @@ Header Style
 }
 
 .header-area .main-nav .nav li:last-child a i {
-  background-color: #f35525;
+  background-color: #AC9366;
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -495,16 +501,16 @@ Header Style
 }
 
 .header-area .main-nav .nav li:hover a {
-  color: #f35525;
+  color: #AC9366;
 }
 
 .header-area .main-nav .nav li a.active {
-  color: #f35525;
+  color: #AC9366;
 }
 
 
 .background-header .main-nav .nav li a.active {
-  color: #f35525;
+  color: #AC9366;
 }
 
 .header-area .main-nav .menu-trigger {
@@ -581,7 +587,10 @@ Header Style
   -webkit-transform-origin: 33% 0;
   transform-origin: 33% 0;
   top: 10px;
-}
+}ul
+
+
+
 
 .header-area .main-nav .menu-trigger.active span,
 .header-area .main-nav .menu-trigger.active span:before,
@@ -772,7 +781,7 @@ Banner Style
 
 .main-banner .item span.category em {
   font-style: normal;
-  color: #f35525;
+  color: #AC9366;
 }
 
 .main-banner .item h2 {
@@ -801,7 +810,7 @@ Banner Style
 }
 
 .main-banner .owl-dots .active {
-  background-color: #f35525;
+  background-color: #AC9366;
 }
 
 .main-banner .owl-nav {
@@ -862,7 +871,7 @@ Featured Style
   width: 110px;
   height: 110px;
   line-height: 110px;
-  background-color: #f35525;
+  background-color: #AC9366;
   border-radius: 50%;
   text-align: center;
   position: absolute;
@@ -902,7 +911,7 @@ Featured Style
 }
 
 .featured .accordion-button:not(.collapsed) {
-  color: #f35525;
+  color: #AC9366;
   background-color: #fafafa;
   outline: none;
 }
@@ -999,7 +1008,7 @@ Video Style
   display: inline-block;
   text-align: center;
   line-height: 52px;
-  color: #f35525;
+  color: #AC9366;
   outline: 15px solid rgba(254, 85, 37, 0.5);
   font-size: 18px;
 }
@@ -1041,14 +1050,14 @@ Fun Facts Style
 .fun-facts .counter h2 {
   margin-right: 25px;
   font-size: 40px;
-  color: #f35525;
+  color: #AC9366;
 }
 
 .fun-facts .counter:after {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #f35525;
+  background-color: #AC9366;
   border-radius: 50%;
   content: '';
   right: -25px;
@@ -1084,7 +1093,7 @@ Best Deal Style
 }
 
 .best-deal .tabs-content .nav-tabs .nav-link.active {
-  background-color: #f35525 !important;
+  background-color: #AC9366 !important;
   color: #fff;
 }
 
@@ -1156,7 +1165,7 @@ Properties Style
 */
 
 .underSlider{
-  background-color: #f35525cd;
+  background-color: #AC9366cd;
   margin-bottom: 4%;
   border-radius: 10px;
   font-family:system-ui;
@@ -1165,24 +1174,21 @@ Properties Style
 
 
 .properties .item {
-  background-color: #f3552569;
-  border: 2px solid;
-  border-radius: 10px;
   height: 80%;
   border-radius: 10px;
   padding: 30px;
   margin-bottom: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.621);
 }
 
 .properties .item img {
-  border-radius: 10px;
+  border-radius: 5px;
+  height: 400px;
 }
 
 .properties .item span.category {
-  background-color: #fbd9cf;
   font-weight: 500;
-  border-radius: 5px;
-  font-size: 14px;
+  font-size: 17px;
   color: #1e1e1e;
   padding: 5px 12px;
   display: inline-block;
@@ -1218,7 +1224,7 @@ Properties Style
 
 .properties .item h6 {
   font-size: 20px;
-  color: #f35525;
+  font-family: system-ui;
   margin-top: 6px;
   display: inline-block;
   float: right;
@@ -1343,7 +1349,7 @@ Contact Style
 }
 
 .contact-content #contact-form button:hover {
-  background-color: #f35525;
+  background-color: #AC9366;
 }
 
 
@@ -1453,7 +1459,7 @@ Properties Style
 }
 
 .properties ul.properties-filter li a.is_active {
-  background-color: #f35525;
+  background-color: #AC9366;
   color: #fff;
 }
 
@@ -1462,7 +1468,7 @@ Properties Style
 }
 
 .properties ul.properties-filter li a:hover {
-  color: #f35525;
+  color: #AC9366;
 }
 
 .properties ul.pagination {
@@ -1493,7 +1499,7 @@ Properties Style
 
 .properties ul.pagination li a:hover,
 .properties ul.pagination li a.is_active {
-  background-color: #f35525;
+  background-color: #AC9366;
   color: #fff;
 }
 
@@ -1550,7 +1556,7 @@ Single Page Style
 }
 
 .single-property .accordion-button:not(.collapsed) {
-  color: #f35525;
+  color: #AC9366;
   background-color: #fafafa;
   outline: none;
 }
@@ -1700,7 +1706,7 @@ Contact Page Style
 }
 
 .contact-page #contact-form button:hover {
-  background-color: #f35525;
+  background-color: #AC9366;
 }
 
 
